# depot

./: .gitignore  Cargo.toml  README.md  config.yaml
demo-producer/: main.py
depot-client/: Cargo.toml
depot-client/src/: main.rs
depot-common/: Cargo.toml
depot-common/src/: lib.rs
depot-server/: Cargo.toml
depot-server/src/: main.rs
src/: client.rs  config.rs  main.rs  message_queue.rs  schema.rs  server.rs  sink.rs
