[package]
name = "depot"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.23.0", features = ["full"] }
rdkafka = { version = "0.25", features = ["cmake-build"] }

arrow = "33.0.0"
arrow-array = "33.0.0"
arrow-csv = "33.0.0"
parquet = "33.0.0"

serde = "1.0.91"
serde_json = "1.0.91"
