[package]
name = "depot"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.27.0", features = ["full"] }
tokio-stream = "0.1.12"
rdkafka = { version = "0.25", features = ["cmake-build"] }

arrow = "33.0.0"
arrow-array = "33.0.0"
arrow-csv = "33.0.0"
parquet = "33.0.0"

serde = "1.0.91"
serde_json = "1.0.91"
serde_yaml = "0.9.19"

futures-lite = "1.13.0"
async-channel = "1.8.0"
