[package]
name = "depot-client"
version = "0.0.1"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
rustls = "0.23.13"
rcgen = "0.13.1"
s2n-quic = "1"
bytes = "1.7.2"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

depot-common = { path = "../depot-common" }
